# Kafka-MinIO-ClickHouse

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
codes/: kafka_to_s3_minio.py  read_data_from_s3_minio.py  simple_consumer.py  simple_producer.py
codes/utils/: utils.py
