[project]
name = "project-2-kafka-minio-clickhouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.19",
    "confluent-kafka>=2.13.0",
    "faker>=40.1.0",
    "fastparquet>=2025.12.0",
    "minio==7.2.20",
    "pandas==2.2.3",
    "pyarrow>=22.0.0",
    "s3fs>=2026.1.0",
]
